k8s/disabled/cleanuparr/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 11011
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: cleanuparr
