k8s/disabled/cleanuparr/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - cleanuparr.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: cleanuparr.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cleanuparr-service
                port:
                  name: http
